--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  bloc:
-  flutter_bloc:
-  http:
-  meta:
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
+  http: ^1.2.1
+  meta: ^1.15.0
 
 dev_dependencies:
   flutter_test:
